team and stats changes

--- a/src/app/mentor/mentor.component.html
+++ b/src/app/mentor/mentor.component.html
@@ -13,7 +13,7 @@
 
                     <div id="mySidenav" class="sidenav">
                         <div class="">
-                            <a href="#" class="nav-reg-btn levitate"  id="reg"><strong>REGISTER <br>NOW</strong></a>
+                            <a href="#" class="nav-reg-btn levitate"  id="reg"><strong>REGISTER <br><span class="mob_hide">NOW</span></strong></a>
                         </div>
                     </div>
                 </div>
