--- a/src/app/qualifier/qualifier.component.html
+++ b/src/app/qualifier/qualifier.component.html
@@ -12,7 +12,7 @@
                     <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Be a Qualifier</h1>
                     <div id="mySidenav" class="sidenav">
                         <div class="">
-                            <a href="#" class="nav-reg-btn levitate"  id="reg"><strong>REGISTER <br>NOW</strong></a>
+                            <a href="#" class="nav-reg-btn levitate"  id="reg"><strong>REGISTER <br><span class="mob_hide">NOW</span></strong></a>
                         </div>
                     </div>
 
