--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -263,7 +263,7 @@
 <!---floating icon-->
 <div id="mySidenav" class="sidenav">
     <div class="">
-        <a href="javascript:void(0);" class="nav-reg-btn levitate" (click)="regstatic()" id="reg"><strong>REGISTER <br>NOW</strong></a>
+        <a href="javascript:void(0);" class="nav-reg-btn levitate" (click)="regstatic()" id="reg"><strong>REGISTER <br><span class="mob_hide">NOW</span></strong></a>
     </div>
 </div>
 <div style="display:none" id="divreg" class="toggle-form">
