--- a/src/app/pro/pro.component.html
+++ b/src/app/pro/pro.component.html
@@ -11,7 +11,7 @@
                    
                     <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Be a Pro</h1>
 
-                    <div id="mySidenav" class="sidenav">
+                    <div *ngIf="!auth.isLoggedIn() && !user" id="mySidenav" class="sidenav">
                         <div class="">
                             <a href="#" class="nav-reg-btn levitate"  id="reg"><strong>REGISTER <br><span class="mob_hide">NOW</span></strong></a>
                         </div>
