--- a/src/app/player-profile/player-profile.component.html
+++ b/src/app/player-profile/player-profile.component.html
@@ -9,7 +9,7 @@
                 <img class="d-block w-100" src="assets/img/background/team-banner.jpg" alt="First slide">
                 <div class="carousel-caption d-md-block">
          
-                    <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Player Stats</h1>
+                    <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Season 2 Player Stats</h1>
                     <div *ngIf="!auth.isLoggedIn() && !user" id="mySidenav" class="sidenav">
                       <div class="">
                         <a href="#" class="nav-reg-btn levitate"  id="reg"><strong>REGISTER <br><span class="mob_hide">NOW</span></strong></a>
